# fundamental-research-engine

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DISCUSSION.md  PROJECT_CONTEXT.md  README.md  deploy.bat  deploy.sh  pyproject.toml  run.bat  run.sh  runner-windows.ps1  start-remote-log-channel.ps1
.github/workflows/: ci.yml
configs/provenance/: ai-liquid-cooling.json  copper-supply-demand.json  cowos.json  hbm4.json  solid-state-battery.json
configs/radar/: hbm4.corpus.json  hbm4.json
configs/themes/: ai-liquid-cooling.json  copper-supply-demand.json  cowos.json  hbm4.json  (+1 more)
docs/: REMOTE_LOGS.md  RUNNER.md  data-sources-design.md  methodology.md  monitoring-and-constraint-radar.md  quality-gate-design.md  工程介绍.md
knowledge/: ontology.json  scoring_rules.json
prompts/: README.md  bottleneck_diagnosis.md  causal_map.md  claim_extraction.md  company_positioning.md  critique.md  mechanism_analysis.md  primer.md  quality_review.md  scenario_analysis.md  theme_definition.md  value_chain_map.md
tests/: test_adapters.py  test_calibration.py  test_claims.py  test_cli.py  test_cninfo.py  test_consensus.py  test_corpus.py  test_critique.py  test_diff.py  test_eastmoney.py  test_edgar.py  test_evidence.py  test_golden_memo.py  test_pipeline.py  test_primer.py  test_prompts.py  test_provenance_drift.py  test_quality.py  test_radar.py  test_stages.py  test_validation.py  test_watch.py  test_web_primer.py  test_web_watch.py
tools/: remote_log_server.py
web/: README.md  __init__.py  __main__.py  app.py  audit.py  auth.py  config.py  service.py
(+51 files in other folders)
